add base skeleton

--- a/src/index.html
+++ b/src/index.html
@@ -7,9 +7,14 @@
     <title>Vegan shopping game</title>
 </head>
 <body>
+    <!-- game screen -->
     <div class="game-view">
-
-
+        <!-- game start screen -->
+        <div class="start-screen">Start Game</div>
+        <!-- score  -->
+        <div class="score-screen">0 pts.</div>
+        <!-- main game area -->
+        <div class="play-screen"></div>
     </div>
    
     <script src="main.js"></script>
