start screen and add game start event listener

--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,11 @@
         <!-- score  -->
         <div class="score-screen">0 pts.</div>
         <!-- main game area -->
-        <div class="play-screen"></div>
+        <div class="play-screen hidden"></div>
     </div>
    
+    <script src="gameState.js"></script>
+    <script src="gameFactory.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
