--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,12 @@
     <!-- game screen -->
     <div class="game-view">
         <!-- game start screen -->
-        <div class="start-screen">Start Game</div>
+        <div class="start-screen">
+            <button>Start Game</button>
+          
+           <img src="/src/images/go_vegan-removebg-preview.png"/>
+         
+        </div>
         <!-- score  -->
         <div class="score-screen">0 pts.</div>
         <!-- main game area -->
