add functionality if has a collision between shoppingCart and chickenLeg to decrease total score
if total score is under zero, the game is over

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
          
         </div>
         <!-- score  -->
-        <div class="score-screen">0 pts.</div>
+        <div class="score-screen hidden">0 pts.</div>
         <!-- main game area -->
         <div class="play-screen hidden"></div>
     </div>
