add  and style game over screen

--- a/src/index.html
+++ b/src/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
     <title>Vegan shopping game</title>
 </head>
+
 <body>
     <!-- game screen -->
     <div class="game-view">
         <!-- game start screen -->
         <div class="start-screen">
             <button>Start Game</button>
-          
-           <img src="/src/images/go_vegan-removebg-preview.png"/>
-         
+
+            <img src="/src/images/go_vegan-removebg-preview.png" />
+
         </div>
         <!-- score  -->
         <div class="score-screen hidden">0 pts.</div>
         <!-- main game area -->
         <div class="play-screen hidden"></div>
+        <!-- game over screen -->
+        <div class="game-over-screen hidden">Game Over</div>
     </div>
-   
+
     <script src="gameState.js"></script>
     <script src="gameFactory.js"></script>
     <script src="main.js"></script>
 </body>
+
 </html>
