add game guides on start-screen

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,14 @@
         <!-- game start screen -->
         <div class="start-screen">
             <button>Start Game</button>
-
+            <article>
+                <p>Game guide:</p>
+                    <p>1. vegan have to buy only apples and for each bought apple he receives 1000 pts.</p>
+                    <p>2. if vegan buy a chicken leg, his total score is decreased by 1500 pts.</p>
+                    <p>3. if vegan's total score is lower or equal to 0, the game is over</p>
+                    <p>4. if it has a collision between the vegan and a chicken leg, the game is over</p>
+                    <p>Enjoy shopping with us! &#128522;</p>
+            </article>
             <img src="/src/images/go_vegan-removebg-preview.png" />
 
         </div>
